# dtb

./: README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docs/io/: classes.mermaid
src/dtb/delta/: delta_table_checker.py  delta_table_operator.py
src/dtb/io/: decorator.py
src/dtb/logging/: decorator.py  log_entry.py  log_entry_delta_version.py  log_service.py  log_table_reader.py  logger.py  output_handler.py  output_handler_delta_table.py  output_handler_factory.py  utils.py  version.py
src/dtb/model/: dataset.py  delta_version.py  expectation.py  expectation_result.py  input.py  output.py
src/dtb/rollback/: delta_table_operator.py  rollback_criteria.py  rollback_detail.py  rollback_manager.py  rollback_plan.py  rollback_request.py  rollback_result.py  table_selector.py
src/dtb/table/: table.py  table_selector.py
src/dtb/tracking/: delta_version_log_entry.py  delta_version_tracker.py  factory.py  tracker.py  tracker_delta_version.py
src/dtb/utils/: databricks_context.py  delta_table.py  exception.py  pyspark.py
tests/delta/: test_delta_table_checker.py  test_delta_table_operator.py
tests/logging/: test_log_service.py  test_log_table_reader.py
tests/model/: test_input.py  test_output.py  test_table.py
tests/rollback/: test_delta_table_operator.py  test_rollback_manager.py  test_rollback_plan.py  test_rollback_request.py  test_rollback_result.py  test_table_selector.py
tests/table/: test_table.py  test_table_selector.py
tests/utils/: test_databricks_context.py  test_delta_table.py
